--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -3462,19 +3462,19 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-danger {
-  --bs-btn-color: #890012;
-  --bs-btn-border-color: #890012;
+  --bs-btn-color: #E1561B;
+  --bs-btn-border-color: #E1561B;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #890012;
-  --bs-btn-hover-border-color: #890012;
+  --bs-btn-hover-bg: #E1561B;
+  --bs-btn-hover-border-color: #E1561B;
   --bs-btn-focus-shadow-rgb: 137, 0, 18;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #890012;
-  --bs-btn-active-border-color: #890012;
+  --bs-btn-active-bg: #E1561B;
+  --bs-btn-active-border-color: #E1561B;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #890012;
+  --bs-btn-disabled-color: #E1561B;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #890012;
+  --bs-btn-disabled-border-color: #E1561B;
   --bs-gradient: none;
 }
 
@@ -9010,7 +9010,7 @@ fieldset:disabled .btn {
 
 .text-muted {
   --bs-text-opacity: 1;
-  color: #6c757d !important;
+  color: #7B89D2 !important;
 }
 
 .text-black-50 {
